test/cases/errors/loader-error-warning/errors.js
module.exports = [
	[
		/abc/,
		/Emitted value instead of an instance of Error/,
		/error-loader\.js/
	],
	[
		/def/,
		/Emitted value instead of an instance of Error/,
		/error-loader\.js/
	]
];
